--- a/data/wingpanel.desktop
+++ b/data/wingpanel.desktop
@@ -2,6 +2,7 @@
 Name=Wingpanel
 Comment=A super sexy space-saving top panel
 Exec=wingpanel
+Icon=wingpanel
 Terminal=false
 Type=Application
 Categories=Utility
