Cleaned up CMake File

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,16 @@
 # Check http://webdev.elementaryos.org/docs/developer-guide/cmake for documentation
 
-cmake_minimum_required (VERSION 2.6)
-cmake_policy (VERSION 2.6)
-list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
-
 project (wingpanel)
+cmake_minimum_required (VERSION 2.8)
+cmake_policy (VERSION 2.6)
+
+list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/vala)
+
+#
+# Base bits
+#
+
+enable_testing ()
 
 set (DATADIR "${CMAKE_INSTALL_PREFIX}/share")
 set (PKGDATADIR "${DATADIR}/wingpanel")
@@ -13,40 +19,48 @@ set (RELEASE_NAME "A super sexy space-saving top panel.")
 set (VERSION "0.3.0")
 set (VERSION_INFO "Testing")
 set (CMAKE_C_FLAGS "-ggdb")
+set (PREFIX ${CMAKE_INSTALL_PREFIX})
+set (DOLLAR "$")
 
 # Set dependencies
 set (WINGPANEL_DEPS "gobject-2.0;glib-2.0;gio-2.0;gee-1.0;gdk-x11-3.0;x11;gtk+-3.0;granite")
-
+set (WINGPANEL_DEPS_NOVALA "gthread-2.0;indicator3-0.4")
 find_package (PkgConfig)
 pkg_check_modules (DEPS REQUIRED ${WINGPANEL_DEPS})
-pkg_check_modules (THREADS REQUIRED gthread-2.0)
-pkg_check_modules (INDICATOR REQUIRED indicator3-0.4)
+pkg_check_modules (DEPS_NOVALA REQUIRED ${WINGPANEL_DEPS_NOVALA})
 
-# Files
 
+list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+
+# Static Files
 file (GLOB stylesheets "${CMAKE_CURRENT_SOURCE_DIR}/data/style/*.css")
 file (GLOB desktop_entry "${CMAKE_CURRENT_SOURCE_DIR}/data/wingpanel.desktop")
 file (GLOB icon "${CMAKE_CURRENT_SOURCE_DIR}/data/wingpanel.svg")
 
-# Get the Indicator Directory
-
+# Find the Indicator Directory
 execute_process (COMMAND ${PKG_CONFIG_EXECUTABLE} indicator3-0.4 --variable=indicatordir OUTPUT_VARIABLE current_indicatordir OUTPUT_STRIP_TRAILING_WHITESPACE)
 set (INDICATORDIR ${current_indicatordir})
 
-# Configure file
-
+# Configuration File and Translation
 configure_file (${CMAKE_SOURCE_DIR}/config.h.cmake ${CMAKE_BINARY_DIR}/config.h)
+add_definitions(-DGETTEXT_PACKAGE=\"${GETTEXT_PACKAGE}\")
 
+# Setup C Libraries
+add_definitions(${DEPS_CFLAGS} ${DEPS_NOVALA_CFLAGS} -include config.h)
 
-find_package (Vala REQUIRED)
-include (ValaVersion)
-ensure_vala_version ("0.12.0" MINIMUM)
+link_libraries(${DEPS_LIBRARIES} ${DEPS_NOVALA_LIBRARIES})
+link_directories(${DEPS_LIBRARY_DIRS} ${DEPS_NOVALA_DIRS})
 
-include (ValaPrecompile)
+# Handle Vala Compilation
+find_package(Vala REQUIRED)
+include(ValaVersion)
+ensure_vala_version("0.12.0" MINIMUM)
+
+include(ValaPrecompile)
 vala_precompile (VALA_C
-    src/WingpanelApp.vala
     src/Settings.vala
     src/Utils.vala
+    src/WingpanelApp.vala
     src/Widgets/Panel.vala
     src/Widgets/AppsButton.vala
     src/Services/WingpanelObjectEntry.vala
@@ -59,24 +73,20 @@ CUSTOM_VAPIS
     vapi/indicators-gtk.vapi
 OPTIONS
 	--thread
-    -g
 )
 
-add_definitions (${DEPS_CFLAGS} ${THREADS_CFLAGS} ${INDICATOR_CFLAGS} -include config.h)
-link_libraries (${DEPS_LIBRARIES} ${THREADS_LIBRARIES} ${INDICATOR_LIBRARIES})
-link_directories (${DEPS_LIBRARY_DIRS} ${THREADS_LIBRARY_DIRS} ${INDICATOR_LIBRARY_DIRS})
+# Settings Schema
+include (GSettings)
+add_schema ("org.pantheon.desktop.wingpanel.gschema.xml")
 
-add_executable (wingpanel ${VALA_C})
+# Add Translation Support
+add_subdirectory (po)
+
+# Create the Executable
+add_executable(wingpanel ${VALA_C})
 
 # Installation
 install (TARGETS wingpanel RUNTIME DESTINATION bin)
 install (FILES ${stylesheets} DESTINATION ${PKGDATADIR}/style)
 install (FILES ${desktop_entry} DESTINATION ${DATADIR}/applications)
 install (FILES ${icon} DESTINATION ${DATADIR}/icons/hicolor/scalable/apps)
-
-# GSettings Schema
-include (GSettings)
-add_schema ("org.pantheon.desktop.wingpanel.gschema.xml")
-
-# Translations
-add_subdirectory (po)
