Implement org.pantheon.desktop.AppLauncherService DBus service client. This lets Wingpanel know whether the applications launcher is visible or not, and set the state of the "Applications" item accordingly. lp:852521

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,11 @@ vala_precompile (VALA_C
     src/Utils.vala
     src/WingpanelApp.vala
     src/Widgets/Panel.vala
+    src/Widgets/IndicatorButton.vala
     src/Widgets/AppsButton.vala
     src/Services/WingpanelObjectEntry.vala
     src/Services/IndicatorFileModel.vala
+    src/Services/AppLauncherService.vala
 PACKAGES
 	${WINGPANEL_DEPS}
 CUSTOM_VAPIS
