--- a/data/wingpanel.desktop
+++ b/data/wingpanel.desktop
@@ -5,7 +5,7 @@ Exec=wingpanel
 Icon=wingpanel
 Terminal=false
 Type=Application
-Categories=Utility
+Categories=Utility;
 NoDisplay=true
 X-Ubuntu-Gettext-Domain=wingpanel
 X-GNOME-Autostart-Notify=false
