Refactor "Shadow" class.
Move it to a separate file and refactor rendering-related code to avoid unnecessary dependency in GtkMenuBar widget.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ vala_precompile (VALA_C ${EXEC_NAME}
     src/Utils.vala
     src/WingpanelApp.vala
     src/Widgets/Panel.vala
+    src/Widgets/PanelShadow.vala
     src/Widgets/IndicatorButton.vala
     src/Widgets/AppsButton.vala
     src/Services/WingpanelObjectEntry.vala
