Move panel geometry and drawing code to separate class: BasePanel.
This class does not know about the indicators or the internal containers of the panel. It only controls X struts and drawing. Along the way lambda callbacks were removed and replaced by normal methods, for easier debugging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ vala_precompile (VALA_C ${EXEC_NAME}
     src/Utils.vala
     src/WingpanelApp.vala
     src/Widgets/Panel.vala
+    src/Widgets/BasePanel.vala
     src/Widgets/PanelShadow.vala
     src/Widgets/IndicatorButton.vala
     src/Widgets/AppsButton.vala
