Add base MenuBar widget. This is a custom menubar that will be used all over Wingpanel.
The intention of this class is avoiding duplicate initialization code applied to all the Gtk.MenuBars used by Wingpanel. Direct uses of Gtk.MenuBar are extremely discouraged from now on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ vala_precompile (VALA_C ${EXEC_NAME}
     src/Widgets/PanelShadow.vala
     src/Widgets/IndicatorButton.vala
     src/Widgets/AppsButton.vala
+    src/Widgets/MenuBar.vala
     src/Widgets/StyleClass.vala
     src/Services/WingpanelObjectEntry.vala
     src/Services/IndicatorFileModel.vala
