Add IndicatorWidget interface.
This interface represents the menu items that correspond to every entry in the panel.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ vala_precompile (VALA_C ${EXEC_NAME}
     src/Settings.vala
     src/Utils.vala
     src/WingpanelApp.vala
+    src/IndicatorWidget.vala
     src/Widgets/Panel.vala
     src/Widgets/BasePanel.vala
     src/Widgets/PanelShadow.vala
