Move IndicatorObject.vala and Settings.vala under Services.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,12 +66,11 @@ ensure_vala_version("0.16.0" MINIMUM)
 
 include(ValaPrecompile)
 vala_precompile (VALA_C ${EXEC_NAME}
-    src/Settings.vala
     src/WingpanelApp.vala
     src/IndicatorWidget.vala
     src/IndicatorModel.vala
     src/IndicatorIface.vala
-    src/IndicatorObject.vala
+
     src/Widgets/Panel.vala
     src/Widgets/BasePanel.vala
     src/Widgets/PanelShadow.vala
@@ -81,6 +80,9 @@ vala_precompile (VALA_C ${EXEC_NAME}
     src/Widgets/IndicatorMenubar.vala
     src/Widgets/IndicatorObjectEntry.vala
     src/Widgets/StyleClass.vala
+
+    src/Services/IndicatorObject.vala
+    src/Services/Settings.vala
     src/Services/IndicatorFactory.vala
     src/Services/IndicatorFileModel.vala
     src/Services/AppLauncherService.vala
