--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,9 @@ set (DATADIR "${CMAKE_INSTALL_PREFIX}/share")
 set (PKGDATADIR "${DATADIR}/wingpanel")
 set (GETTEXT_PACKAGE "wingpanel")
 set (EXEC_NAME "wingpanel")
-set (RELEASE_NAME "Luna Beta 2")
-set (VERSION "0.2.2")
-set (VERSION_INFO "luna-beta2")
+set (RELEASE_NAME "Luna")
+set (VERSION "0.2.3")
+set (VERSION_INFO "luna")
 set (CMAKE_C_FLAGS "-ggdb")
 set (PREFIX ${CMAKE_INSTALL_PREFIX})
 set (DOLLAR "$")
